--- a/sara-rivas.html
+++ b/sara-rivas.html
@@ -46,7 +46,7 @@
   <div>
     <h1 class="prospect-name">Sara Rivas</h1>
     <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ All-Star Investment Banking Prospect</p>
-    <p class="prospect-subtitle">Stanford University · Lacrosse · Class of 2028</p>
+    <p class="prospect-subtitle">Stanford University · Track & Field · Class of 2028</p>
   </div>
 
   <div class="prospect-grade-card">
@@ -70,10 +70,10 @@
     <ul class="meta-list">
       <li><span>School</span><span class="meta-value">Stanford University</span></li>
       <li><span>Major</span><span class="meta-value">Aerospace Engineering</span></li>
-      <li><span>Minor</span><span class="meta-value">Finance (Interest)</span></li>
+      <li><span>Minor</span><span class="meta-value">Finance</span></li>
       <li><span>Year</span><span class="meta-value">2028</span></li>
       <li><span>GPA</span><span class="meta-value">3.6</span></li>
-      <li><span>Sport</span><span class="meta-value">Lacrosse</span></li>
+      <li><span>Sport</span><span class="meta-value">Track & Field</span></li>
       <li><span>Hometown</span><span class="meta-value">Bend, OR</span></li>
     </ul>
   </div>
